--- a/app/views/payWechatOrder.html
+++ b/app/views/payWechatOrder.html
@@ -28,6 +28,9 @@
                     <span class="glyphicon glyphicon-ok"></span>
                     <span>付款成功，吾皇圣明</span>
                 </div>
+                <div class="traceOrderTip">
+                    <span>关注“微服私纺（weavesfun）”公众号，即可追踪订单状态</span>
+                </div>
             </div>
             <div class="payButtonDiv" style="{{orderInfo.payStatus === 'notPayed' ? '' : 'display:none;'}}">
                 <span class="payButton" ng-click="onPayClicked()" >国库拨款</span>
