--- a/app/app.css
+++ b/app/app.css
@@ -302,10 +302,14 @@ body.weavesFunBody {
 }
 
 .createDetailView .personalGalleryRow .uploadedImageArea {
-  height: 80%;
   height: calc(100% - 110px);
   height: -webkit-calc(100% - 110px);
   height: -moz-calc(100% - 110px);
+  height: -o-calc(100% - 110px);
+}
+
+.createDesignView .personalGalleryRow.publicGalleryRow .uploadedImageArea {
+  height: 100%;
 }
 
 .createDetailView .personalGalleryRow .uploadRowArea {
@@ -1372,6 +1376,11 @@ body.weavesFunBody {
 .myDesignListCenter > .centerContent {
   height: 85%;
   border: 2px solid rgb(215, 180, 104);
+}
+
+.myDesignListCenter .noDesignFound {
+  color: rgb(215, 180, 104);
+  font-size: 15px;
 }
 
 .myDesignListCarousel {
