--- a/app/views/myDesigns.html
+++ b/app/views/myDesigns.html
@@ -40,7 +40,7 @@
                         <li ng-repeat="oDesign in aMyDesigns">
                             <div class="designItem" ng-click="onDesignItemClicked(oDesign)">
                                 <img src="{{oDesign.bkImg}}" class="designBackgroundImg">
-                                <img ng-src="{{oDesign.previewImage64}}" style="{{positionInfoStyleValue}}">
+                                <img ng-src="{{oDesign.previewImage64_2}}" style="{{positionInfoStyleValue}}">
                             </div>
                         </li>
                     </ul>
