--- a/app/views/addressDetail.html
+++ b/app/views/addressDetail.html
@@ -1,6 +1,6 @@
 <div class='row addressDesignView'>
     <div class="addressDetailTitleRow">
-        <div>寝殿：</div>
+        <div>邮寄地址：</div>
     </div>
     <div class="contactInfo">
         <span>联系人：</span>
