--- a/app/views/orderDesign.html
+++ b/app/views/orderDesign.html
@@ -66,7 +66,7 @@
         </div>
     </div>
     <div class="payOptionRow">
-        <div class="paySource">
+        <div class="paySource" style="visibility:hidden;">
             <div class="paySourceButtonDiv">
                 <span class="glyphicon glyphicon-triangle-left" ng-click="onPaySourceBtnClicked()"></span>
             </div>
@@ -83,7 +83,7 @@
                 </div>
             </div>
         </div>
-        <div class="payCoupon">
+        <div class="payCoupon" style="visibility:hidden;">
             <div class="payCouponButtonDiv">
                 <span class="glyphicon glyphicon-triangle-right" ng-click="onPayCouponBtnClicked()"></span>
             </div>
