--- a/app/views/myDesigns.html
+++ b/app/views/myDesigns.html
@@ -34,16 +34,19 @@
                     <div class="topAxisCenter"></div>
                     <div class="topAxisRight"></div>
                 </div>
-                <div class="centerContent">
-                    <ul rn-carousel class="image myDesignListCarousel" rn-carousel-transition="fadeAndSlide">
+                <div class="centerContent" ng-if="aMyDesigns.length > 0">
+                    <ul rn-carousel rn-carousel-buffered class="image myDesignListCarousel" 
+                    rn-carousel-transition="fadeAndSlide" rn-carousel-index="iDesignCarouselIndex">
                         <span class="noDesignFound" style="{{aMyDesigns.length < 1 ? '' : 'display:none;'}}">竟然目前还没有设计，不如我来设计吧</span>
                         <li ng-repeat="oDesign in aMyDesigns">
                             <div class="designItem" ng-click="onDesignItemClicked(oDesign)">
                                 <img src="{{oDesign.bkImg}}" class="designBackgroundImg">
-                                <img ng-src="{{oDesign.previewImage64_2}}" style="{{positionInfoStyleValue}}">
+                                <img ng-src="{{oDesign.previewImage64}}" style="{{positionInfoStyleValue}}">
                             </div>
                         </li>
                     </ul>
+                    <div rn-carousel-indicators ng-if="aMyDesigns.length > 1" slides="aMyDesigns" 
+                    rn-carousel-index="iDesignCarouselIndex" class="carouselIndicator"></div>
                 </div>
                 <div class="bottomAxis">
                     <div class="bottomAxisLeft"></div>
