--- a/app/views/myDesigns.html
+++ b/app/views/myDesigns.html
@@ -45,8 +45,8 @@
                             </div>
                         </li>
                     </ul>
-                    <div rn-carousel-indicators ng-if="aMyDesigns.length > 1" slides="aMyDesigns" 
-                    rn-carousel-index="iDesignCarouselIndex" class="carouselIndicator"></div>
+                    <!--div rn-carousel-indicators ng-if="aMyDesigns.length > 1" slides="aMyDesigns" 
+                    rn-carousel-index="iDesignCarouselIndex" class="carouselIndicator"></div-->
                 </div>
                 <div class="bottomAxis">
                     <div class="bottomAxisLeft"></div>
