--- a/app/views/myDesigns.html
+++ b/app/views/myDesigns.html
@@ -35,7 +35,7 @@
                     <div class="topAxisCenter"></div>
                     <div class="topAxisRight"></div>
                 </div>
-                <div class="centerContent" ng-if="aMyDesigns.length > 0">
+                <div class="centerContent">
                     <ul rn-carousel rn-carousel-buffered class="image myDesignListCarousel" 
                     rn-carousel-transition="fadeAndSlide" rn-carousel-index="iDesignCarouselIndex">
                         <span class="noDesignFound" style="{{aMyDesigns.length < 1 ? '' : 'display:none;'}}">竟然目前还没有设计，不如我来设计吧</span>
