--- a/app/views/addressDetail.html
+++ b/app/views/addressDetail.html
@@ -10,7 +10,7 @@
         <span>手机：</span>
         <input type="text" class="form-control" ng-model="orderInfo.sMobile">
     </div>
-    <div class="provinceAndCity">
+    <div class="provinceAndCity" style="display:none;">
         <div>
             <span>省</span>
             <input type="text" class="form-control" ng-model="orderInfo.sProvince">
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="districtAndCode">
-        <div>
+        <div  style="display:none;">
             <span>区</span>
             <input type="text" class="form-control" ng-model="orderInfo.sDistrict">
         </div>
