--- a/app/views/createDesign.html
+++ b/app/views/createDesign.html
@@ -20,19 +20,19 @@
         <div class='row genderButtonRow'>
             <div class="col-xs-6 maleButton">
                 <div>
-                    <span class="icon-m text" ng-click="onMaleSelected()"></span>
+                    <span class="icon-m2 text" ng-click="onMaleSelected()"></span>
                 </div>
                 <div>
-                    <span class="icon-m1 icon" ng-click="onMaleSelected()"></span>
+                    <span class="icon-m icon" ng-click="onMaleSelected()"></span>
                 </div>
                 <!--div><img src="img/genderMale.png" ng-click="onMaleSelected()"></div-->
             </div>
             <div class="col-xs-6 femaleButton">
                 <div>
-                    <span class="icon-f text" ng-click="onFemalerSelected()"></span>
+                    <span class="icon-f2 text" ng-click="onFemalerSelected()"></span>
                 </div>
                 <div>
-                    <span class="icon-f1 icon" ng-click="onFemalerSelected()"></span>
+                    <span class="icon-f icon" ng-click="onFemalerSelected()"></span>
                 </div>
                 <!--div><img src="img/genderFemale.png" ng-click="onFemalerSelected()"></div-->
             </div>
@@ -96,7 +96,9 @@
     </div>
     <div class="busyView" style="{{busyViewStyle}}">
         <div>
-            <span>朕不急</span>
+            <span class="icon-tzheng"></span>
+            <span class="icon-tbu"></span>
+            <span class="icon-tji"></span>
         </div>
         <img src="img/cloud.png" class="busyViewCloud">
     </div>
