--- a/app/views/saveDetail.html
+++ b/app/views/saveDetail.html
@@ -1,6 +1,21 @@
 <div class='row saveDetailView'>
     <div class="saveSuccessTitle" style="{{designInfo.bSaved === true ? '' : 'display:none;'}}">
-        <span>新设计的独家新衣<br>成功保存</span>
+        <div class="titleLine1">
+            <span class="icon-txin"></span>
+            <span class="icon-tshe"></span>
+            <span class="icon-tji2"></span>
+            <span class="icon-tde"></span>
+            <span class="icon-tdu"></span>
+            <span class="icon-tjia"></span>
+            <span class="icon-txin"></span>
+            <span class="icon-tyi"></span>
+        </div>
+        <div class="titleLine2">
+            <span class="icon-tchen"></span>
+            <span class="icon-tgong2"></span>
+            <span class="icon-tbao"></span>
+            <span class="icon-tcun"></span>
+        </div>
     </div>
     <div class="designDescTitle" style="{{designInfo.bSaved === true ? 'display:none;' : ''}}">
         <span class="designDescTitlePencil glyphicon glyphicon-pencil"></span>
