--- a/app/views/createDesign.html
+++ b/app/views/createDesign.html
@@ -13,7 +13,10 @@
         </div-->
         <div class="pleaseDesign">
             <div>
-                <span>恭请设计</span>
+                <span class="icon-tgong"></span>
+                <span class="icon-tqing"></span>
+                <span class="icon-tshe"></span>
+                <span class="icon-tji2"></span>
                 <img src="img/vertical_logo.png" class="verticalLogo">
             </div>
         </div>
