--- a/app/views/payWechatOrder.html
+++ b/app/views/payWechatOrder.html
@@ -28,8 +28,11 @@
                     <span class="glyphicon glyphicon-ok"></span>
                     <span>付款成功，吾皇圣明</span>
                 </div>
+                <div class="qrImage">
+                    <img src="img/qrcode_ws.jpg">
+                </div>
                 <div class="traceOrderTip">
-                    <span>关注“微服私纺（weavesfun）”公众号，即可追踪订单状态</span>
+                    <span>长按识别二维码，关注“微服私纺（weavesfun）”公众号，选我的订单即可追踪订单状态</span>
                 </div>
             </div>
             <div class="payButtonDiv" style="{{orderInfo.payStatus === 'notPayed' ? '' : 'display:none;'}}">
