--- a/app/views/orderDesign.html
+++ b/app/views/orderDesign.html
@@ -46,7 +46,7 @@
                     ng-click="onDecreaseQuantity()">减</label>
                 </div>
                 <div class="moreOrders">
-                    <span class="glyphicon glyphicon-plus"></span>
+                    <span class="icon-info"></span>
                 </div>
             </div>
             <div class="summary">
@@ -94,6 +94,6 @@
     </div>
     <div class="naviBtnRow">
         <span class="icon-undo" ng-click="onBack2SaveDetailClicked()"></span>
-        <span class="glyphicon glyphicon-send"></span>
+        <span class="glyphicon glyphicon-send" ng-click="onPrepareShareButtonClicked()"></span>
     </div>
 </div>
