--- a/app/views/payWechatOrder.html
+++ b/app/views/payWechatOrder.html
@@ -9,7 +9,7 @@
             <div class="orderInfoPreview">
                 <div class="basicInfo">
                     <span>{{orderInfo.clothesGender === 'male' ? '男士T恤' : '女士T恤'}}</span>
-                    <span>{{orderInfo.clothesSize}} 号</span>
+                    <span>{{orderInfo.clothesSizeShow}} 号</span>
                     <span>{{orderInfo.clothesQuanaity}} 件</span>
                 </div>
                 <div class="originTotalPrice">
