--- a/app/views/orderDesign.html
+++ b/app/views/orderDesign.html
@@ -23,7 +23,7 @@
         </div>
         <div class="quantityContent">
             <div class="timeFootage">
-                <span>公元2015年4月15日</span>
+                <span>{{oTimeStr}}</span>
             </div>
             <div class="qinci">
                 <span>钦此</span>
